# genai-studio-sdk

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  genai_studio.py  pyproject.toml  requirements.txt  test_full_suite.py
.genai_studio/: .gitignore  mcp.json
.genai_studio/skills/code-review/: SKILL.md
.genai_studio/skills/eda/: SKILL.md
.genai_studio/skills/hypothesis-testing/: SKILL.md
.genai_studio/skills/lean-prove/: SKILL.md
.genai_studio/skills/regression-modeling/: SKILL.md
benchmarks/: README.md  _bench.py  _grid.py  _logprobs_probe.py  agentic_eval.py  datascibench_mini.py  dsbench_mini.py  factor_verify_eval.py  free_chat_eval.py  math_eval.py  math_grade.py  math_selfconsist.py  math_specialist_bakeoff.py  mathlib_prove_eval.py  paper_react.py  react_eval.py  react_exact.py  real_benchmarks.py  root_solve_eval.py  run_all.py
benchmarks/_data/: hotpotqa_dev_10.json  hotpotqa_dev_20.json  hotpotqa_dev_200.json  hotpotqa_dev_3.json  hotpotqa_dev_5.json  hotpotqa_dev_500.json
benchmarks/_results/: hotpotqa_exact_n3.json  hotpotqa_exact_n5.json  hotpotqa_paper_n3.json  hotpotqa_paper_n500.json
docs/: embedding-models.md  gateway-endpoints.md  genai_studio_guide.html  guide.html
examples/: 01_tools.py  02_agent_loop.py  03_tracing.py  04_structured_output.py  05_data_tools.py  06_multi_agent.py  07_eval_guardrails.py  08_grounded_verifier.py  09_orchestration.py  10_guards.py  11_passk_eval.py  12_team.py  13_arxiv_to_sql.py  14_skills.py  15_memory.py  16_deferred_tools.py  17_verification.py  18_lean_prove.py  19_routed_team.py  README.md  _common.py
genai_studio/: __init__.py  __main__.py
genai_studio/agents/: __init__.py  agent.py  approval.py  client.py  compose.py  embed.py  errors.py  eval.py  events.py  fanout.py  frontmatter.py  guard.py  orchestrate.py  panel.py  presets.py  profiles.py  skills.py  team.py  tool.py  tool_search.py  trace.py  verified.py  verify.py
genai_studio/agents/datascience/: README.md  __init__.py  _format.py  _guard.py  analysis.py  prompts.py
genai_studio/agents/datascience/tools/: __init__.py  _sandbox_worker.py  datasets.py  describe.py  io_tools.py  modeling.py  plotting.py  python_exec.py  r_exec.py  sandbox.py  stats.py  verify.py
genai_studio/agents/knowledge/: __init__.py  okf.py
genai_studio/agents/mcp/: __init__.py  client.py  config.py  guard.py  mapping.py
genai_studio/agents/memory/: __init__.py  index.py  retrieval.py  store.py  tools.py
genai_studio/agents/repl/: __init__.py  cli.py  commands.py  config.py  custom.py  interrupt.py  memory.py  prettify.py  render.py  session.py
genai_studio/agents/tools/: __init__.py  _workspace.py  academic.py  background.py  files.py  general.py  grounding.py  http.py  lean.py  mathlib.py  patch.py  plan.py  retrieval.py  search.py  shell.py  smt.py  symbolic.py  web.py
tests/: conftest.py  test_academic.py  test_agent_loop.py  test_agent_sampling.py  test_approval.py  test_as_tool.py  test_client.py  test_coding_tools.py  test_compose.py  test_compose_agent.py  test_datascience.py  test_datascience_enh.py  test_depth_effort.py  test_edits.py  test_embed.py  test_eval.py  test_fanout.py  test_grounding.py  test_grounding_live.py  test_guard.py  test_http_tools.py  test_io_tools.py  test_lean.py  test_live_integration.py  test_math_grade.py  test_mathlib.py  test_mcp.py  test_memory.py  test_okf.py  test_orchestrate.py  test_panel.py  test_plan.py  test_presets.py  test_prettify.py  test_r_exec.py  test_rag_parsing.py  test_react.py  test_repl_banner.py  test_repl_commands.py  test_repl_input.py  (+17 more)
tests/fixtures/: legacy_sample.doc
