[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "genai-studio-sdk"
dynamic = ["version"]
description = "A Python wrapper for Purdue's GenAI Studio API — chat, streaming, multi-turn conversations, embeddings, RAG, and a CLI."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Timothy Reese" }]
keywords = ["llm", "genai", "purdue", "openai", "ollama", "litellm", "rag", "embeddings"]
dependencies = [
    "openai>=1.0",
    "httpx",
    "numpy",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
# Structured output (Agent.output_schema) — pydantic only, no scientific stack.
structured = ["pydantic>=1.10"]
# Data-science agents + tools: the heavy scientific stack lives ONLY here.
# numpy is already a core dependency, so it is not repeated.
datascience = [
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.10",
    "statsmodels>=0.14",
    "matplotlib>=3.7",
]
# Grounding: Data Commons statistical knowledge graph for the verifier sub-agent.
grounding = ["datacommons-client>=2.0"]
# Knowledge authoring: nicer OKF frontmatter parsing (a stdlib fallback works without it).
knowledge = ["pyyaml"]
test = ["pytest>=7", "pydantic>=1.10", "pyyaml"]
dev = ["genai-studio-sdk[datascience,structured,grounding,knowledge,test]", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/treese41528/genai-studio-sdk"
Repository = "https://github.com/treese41528/genai-studio-sdk"

[project.scripts]
genai-studio = "genai_studio:main"

# Package distribution: genai_studio/ (client in __init__.py) + the genai_studio.agents subpackage.
# `find` auto-discovers future subpackages (e.g. genai_studio.agents.datascience) so none are forgotten.
[tool.setuptools.packages.find]
include = ["genai_studio*"]

# Single-source the version from genai_studio.__version__ (read via ast, no import)
[tool.setuptools.dynamic]
version = { attr = "genai_studio.__version__" }

# Confine pytest to the unit tests; the live integration file self-gates on the
# API key, and the legacy test_full_suite.py stays runnable via `python test_full_suite.py`.
[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
